--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,98 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns="http://schemas.android.com/tools"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/colorPrimary"
     android:orientation="vertical">
+
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="0dp"
-        android:layout_height="80dp"
+        layout_editor_absoluteX="8dp"
+        layout_editor_absoluteY="84dp"
+        android:layout_width="382dp"
+        android:layout_height="71dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
         android:background="@drawable/wood"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
-
-    <Button
-        android:id="@+id/location"
-        android:layout_width="52dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="2dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="4dp"
-        android:layout_marginTop="8dp"
-        android:background="@android:drawable/star_big_off"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintLeft_toRightOf="@+id/logoID"
-        app:layout_constraintRight_toRightOf="@+id/toolbar"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/menu"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="63dp"
+        android:layout_width="62dp"
         android:layout_height="54dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/hexagon"
-        app:layout_constraintLeft_toLeftOf="@+id/toolbar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/logoID"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="24dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintVertical_bias="0.666"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar" />
+        android:layout_marginTop="8dp"
+        android:background="@drawable/hexagonwhite"
+        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
+        app:layout_constraintHorizontal_bias="0.51"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/logoID"
+        app:layout_constraintTop_toTopOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.888" />
 
     <ImageView
         android:id="@+id/logoID"
-        android:layout_width="170dp"
-        android:layout_height="66dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="2dp"
-        android:background="@drawable/logo"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintLeft_toLeftOf="@+id/toolbar"
-        app:layout_constraintRight_toRightOf="@+id/toolbar"
-        app:layout_constraintTop_toTopOf="@+id/toolbar"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/toolbar" />
+        layout_editor_absoluteX="0dp"
+        layout_editor_absoluteY="-25dp"
+        android:layout_width="138dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="0dp"
+        android:background="@drawable/logowhite"
+        app:layout_constraintHorizontal_bias="0.506"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/mapView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginRight="0dp"
-        android:background="@color/colorPrimaryDark"
+    <ImageView
+        android:id="@+id/imageView4"
+        layout_editor_absoluteY="38dp"
+        android:layout_width="345dp"
+        android:layout_height="475dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <SearchView
-        android:id="@+id/searchView"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:background="@color/common_google_signin_btn_text_dark_disabled"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        android:layout_marginTop="0dp" />
+        app:layout_constraintTop_toBottomOf="@+id/logoID"
+        app:srcCompat="@drawable/map"
+        app:layout_constraintVertical_bias="0.477" />
 
 </android.support.constraint.ConstraintLayout>
