--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -2,13 +2,25 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <group android:checkableBehavior="single">
-        <item android:id="@+id/nav_info" android:icon="@android:drawable/ic_menu_send"
+        <item
+            android:id="@+id/nav_info"
+            android:checkable="true"
+            android:icon="@android:drawable/ic_menu_send"
             android:title="My Info" />
-        <item android:id="@+id/nav_fav" android:icon="@android:drawable/btn_star"
+        <item
+            android:id="@+id/nav_fav"
+            android:checkable="true"
+            android:icon="@android:drawable/btn_star"
             android:title="Favorites" />
-        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_manage"
+        <item
+            android:id="@+id/nav_settings"
+            android:checkable="true"
+            android:icon="@android:drawable/ic_menu_manage"
             android:title="Settings" />
-        <item android:id="@+id/nav_logout" android:icon="@android:drawable/ic_menu_close_clear_cancel"
+        <item
+            android:id="@+id/nav_logout"
+            android:checkable="true"
+            android:icon="@android:drawable/ic_menu_close_clear_cancel"
             android:title="Logout" />
     </group>
 
