--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,29 +35,29 @@
     <Button
         android:id="@+id/location"
         layout_editor_absoluteX="303dp"
-        layout_editor_absoluteY="7dp"
-        android:layout_width="88dp"
-        android:layout_height="56dp"
+        layout_editor_absoluteY="10dp"
+        android:layout_width="39dp"
+        android:layout_height="51dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:background="@drawable/mapbtn"
-        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintHorizontal_bias="0.46"
         app:layout_constraintLeft_toRightOf="@+id/logoID"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="@+id/logoID"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="@+id/logoID"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/menu"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        layout_editor_absoluteX="38dp"
+        layout_editor_absoluteX="39dp"
         layout_editor_absoluteY="17dp"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="49dp"
+        android:layout_height="47dp"
         android:layout_marginEnd="24dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="24dp"
@@ -65,11 +65,11 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/menubtn"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.59"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/logoID"
         app:layout_constraintTop_toTopOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.642" />
+        app:layout_constraintVertical_bias="0.4" />
 
     <ImageView
         android:id="@+id/logoID"
@@ -96,6 +96,7 @@
         android:layout_width="match_parent"
         android:layout_height="475dp"
         android:layout_marginTop="0dp"
+        android:clickable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
