--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -10,14 +10,15 @@
         android:layout_alignLeft="@+id/Phone"
         android:layout_alignParentTop="true"
         android:layout_alignStart="@+id/Phone"
-        android:background="@android:color/transparent"
         android:layout_marginTop="21dp"
-        android:clickable="false"
+        android:background="@android:color/transparent"
+        android:clickable="true"
         android:cursorVisible="false"
         android:ems="10"
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:inputType="textPersonName"
+        android:onClick="OnClickVenue"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -30,11 +31,12 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/VenueName"
-        android:clickable="false"
+        android:clickable="true"
         android:cursorVisible="false"
         android:ems="10"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:onClick="OnClickVenue"
         android:textAlignment="textStart"
         android:textSize="12sp" />
 </RelativeLayout>
