--- a/app/src/main/res/layout/activity_venue.xml
+++ b/app/src/main/res/layout/activity_venue.xml
@@ -27,28 +27,30 @@
         android:id="@+id/location"
         layout_editor_absoluteX="309dp"
         layout_editor_absoluteY="13dp"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/mapbtn"
         app:layout_constraintHorizontal_bias="0.506"
         app:layout_constraintLeft_toRightOf="@+id/logoID"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/arrowBack"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
         layout_editor_absoluteX="28dp"
         layout_editor_absoluteY="17dp"
-        android:layout_width="88dp"
-        android:layout_height="53dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="24dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/arrow"
         app:layout_constraintBottom_toBottomOf="@+id/toolbar"
@@ -56,9 +58,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/logoID"
         app:layout_constraintTop_toTopOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.51"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="24dp" />
+        app:layout_constraintVertical_bias="0.51" />
 
     <ImageView
         android:id="@+id/logoID"
@@ -80,44 +80,44 @@
         android:id="@+id/imageView5"
         android:layout_width="414dp"
         android:layout_height="142dp"
-        app:layout_constraintBottom_toTopOf="@+id/venueID"
-        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/bar" />
+        app:srcCompat="@drawable/bar"
+        app:layout_constraintHorizontal_bias="0.433" />
 
     <TextView
         android:id="@+id/venueID"
-        android:layout_width="224dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="24dp"
+        android:layout_width="205dp"
+        android:layout_height="50dp"
         android:background="@color/colorAccent"
         android:fontFamily="sans-serif-condensed"
         android:text="12th Street Bar"
         android:textAlignment="center"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        app:layout_constraintTop_toTopOf="@+id/lvVenue"
-        app:layout_constraintVertical_bias="0.518"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="0dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.818"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
 
     <Spinner
         android:id="@+id/dayOfThWeek"
-        android:layout_width="104dp"
-        android:layout_height="27dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="112dp"
+        android:layout_height="42dp"
         android:layout_marginEnd="24dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
         android:layout_marginStart="24dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/lvVenue"
+        android:layout_marginTop="24dp"
+        android:background="@color/com_smart_login_code"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/venueID" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline"
@@ -127,21 +127,6 @@
         app:layout_constraintGuide_begin="16dp"
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="0dp" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
-        android:background="@color/cardview_light_background"
-        android:fadingEdgeLength="@dimen/com_facebook_auth_dialog_corner_radius_oversized"
-        android:onClick="OnVenueClick"
-        android:text="Specials"
-        android:textColor="@color/Black"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginBottom="4dp"
-        app:layout_constraintBottom_toTopOf="@+id/dayOfThWeek"
-        android:layout_marginStart="8dp" />
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/btmToolbar"
@@ -157,62 +142,68 @@
 
     <Button
         android:id="@+id/phone"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="4dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:background="@drawable/phnbtn"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="20dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/favorite"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="4dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
+        android:layout_marginStart="40dp"
         android:background="@drawable/favbtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintLeft_toRightOf="@+id/phone"
-        app:layout_constraintRight_toLeftOf="@+id/map"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp" />
+        app:layout_constraintRight_toLeftOf="@+id/map" />
 
     <Button
         android:id="@+id/map"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="4dp"
+        android:layout_marginEnd="50dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/maps"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/share"
-        android:layout_marginEnd="50dp" />
+        app:layout_constraintRight_toLeftOf="@+id/share" />
 
     <Button
         android:id="@+id/share"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="50dp"
+        android:layout_height="40dp"
         android:layout_marginBottom="4dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:background="@drawable/sharebtn"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="@+id/btmToolbar"
-        android:layout_marginEnd="20dp" />
+        app:layout_constraintRight_toRightOf="@+id/btmToolbar" />
 
     <ListView
         android:id="@+id/lvVenue"
-        android:layout_width="388dp"
-        android:layout_height="216dp"
+        android:layout_width="385dp"
+        android:layout_height="159dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:backgroundTint="@color/colorAccent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btmToolbar"
+        app:layout_constraintHorizontal_bias="0.54"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+        app:layout_constraintTop_toBottomOf="@+id/dayOfThWeek"
+        app:layout_constraintVertical_bias="0.52"
+        tools:layout_editor_absoluteY="352dp"
+        tools:layout_editor_absoluteX="3dp" />
 
 
 </android.support.constraint.ConstraintLayout>
