--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -6,11 +6,11 @@
         android:id="@+id/VenueName"
         layout_editor_absoluteX="0dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/Phone"
+        android:layout_height="60dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/Phone"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="11dp"
         android:background="@android:color/transparent"
         android:clickable="true"
         android:cursorVisible="false"
@@ -19,24 +19,27 @@
         android:focusableInTouchMode="false"
         android:inputType="textPersonName"
         android:onClick="OnClickVenue"
+        android:textAlignment="viewStart"
+        android:textColor="@color/wallet_bright_foreground_holo_dark"
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/Phone"
-        layout_editor_absoluteX="0dp"
-        layout_editor_absoluteY="360dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/VenueName"
-        android:clickable="true"
-        android:cursorVisible="false"
-        android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:onClick="OnClickVenue"
-        android:textAlignment="textStart"
-        android:textSize="12sp" />
+    <!--
+<EditText
+      android:id="@+id/Phone"
+      layout_editor_absoluteX="0dp"
+      layout_editor_absoluteY="360dp"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_alignParentLeft="true"
+      android:layout_alignParentStart="true"
+      android:layout_below="@+id/VenueName"
+      android:clickable="true"
+      android:cursorVisible="false"
+      android:ems="10"
+      android:focusable="false"
+      android:focusableInTouchMode="false"
+      android:onClick="OnClickVenue"
+      android:textAlignment="textStart"
+      android:textSize="12sp" /> -->
 </RelativeLayout>
