--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -91,7 +91,7 @@
 
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/spintest"
         layout="@layout/layout_main_featured_special"
         layout_editor_absoluteX="8dp"
         layout_editor_absoluteY="0dp"
@@ -119,7 +119,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/include"
+        app:layout_constraintTop_toBottomOf="@+id/spintest"
         app:layout_constraintVertical_bias="0.444" />
 
 
