--- a/app/src/main/res/layout/activity_venue.xml
+++ b/app/src/main/res/layout/activity_venue.xml
@@ -157,7 +157,7 @@
         tools:layout_editor_absoluteY="311dp"
         tools:layout_editor_absoluteX="7dp" />
     <include
-        android:id="@+id/include"
+        android:id="@+id/spintest"
         layout="@layout/layout_venue_top"
         android:layout_width="400dp"
         android:layout_height="229dp"
@@ -171,5 +171,19 @@
         android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toTopOf="@+id/lvSpecials"
         app:layout_constraintVertical_bias="0.5"></include>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="148dp"
+        android:layout_height="56dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="@+id/spintest"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/spintest"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="@+id/spintest"
+        android:layout_marginTop="8dp"
+        tools:layout_editor_absoluteY="146dp" />
 
 </android.support.constraint.ConstraintLayout>
