--- a/app/src/main/res/layout/layout_main_featured_special.xml
+++ b/app/src/main/res/layout/layout_main_featured_special.xml
@@ -9,11 +9,11 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="135dp"
+        android:layout_height="76dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginTop="24dp"
         android:text="Featured Special:"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -23,36 +23,18 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="24dp" />
 
     <EditText
         android:id="@+id/venueName"
-        android:layout_width="260dp"
-        android:layout_height="33dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="120dp"
-        android:layout_marginTop="8dp"
-        android:background="@android:color/transparent"
-        android:cursorVisible="false"
-        android:ems="10"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:inputType="textPersonName"
-        android:text="Toasted"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
-    <EditText
-        android:id="@+id/special"
-        android:layout_width="229dp"
-        android:layout_height="65dp"
+        android:layout_width="128dp"
+        android:layout_height="68dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="120dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
         android:layout_marginTop="0dp"
         android:background="@android:color/transparent"
         android:cursorVisible="false"
@@ -60,14 +42,40 @@
         android:focusable="false"
         android:focusableInTouchMode="false"
         android:inputType="textPersonName"
-        android:text="$3 Mimosas"
+        android:text="Humphrey's"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/title"
+        app:layout_constraintRight_toLeftOf="@+id/imageButton"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.216"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintHorizontal_bias="1.0" />
+
+    <EditText
+        android:id="@+id/special"
+        android:layout_width="154dp"
+        android:layout_height="45dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="47dp"
+        android:layout_marginTop="0dp"
+        android:background="@android:color/transparent"
+        android:cursorVisible="false"
+        android:ems="10"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:inputType="textPersonName"
+        android:text="$2 Wells"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.885"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/venueName"
-        app:layout_constraintVertical_bias="0.51"
+        app:layout_constraintVertical_bias="0.0"
         tools:layout_constraintLeft_creator="1"
         tools:layout_constraintRight_creator="1"
         tools:layout_constraintTop_creator="1" />
@@ -78,12 +86,12 @@
         android:layout_height="41dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="200dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="24dp"
         android:layout_marginTop="8dp"
         android:background="@android:color/transparent"
         android:onClick="OnClickVenue"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.643"
+        app:layout_constraintHorizontal_bias="0.76"
         app:layout_constraintLeft_toLeftOf="@+id/special"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -91,5 +99,6 @@
         app:srcCompat="@drawable/arrowright"
         tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintRight_creator="1" />
+        tools:layout_constraintRight_creator="1"
+        app:layout_constraintVertical_bias="0.505" />
 </android.support.constraint.ConstraintLayout>
