--- a/app/src/main/res/layout/layout_venue_top.xml
+++ b/app/src/main/res/layout/layout_venue_top.xml
@@ -51,7 +51,7 @@
         android:ems="10"
         android:focusable="false"
         android:focusableInTouchMode="false"
-        android:fontFamily="sans-serif"
+        android:fontFamily="serif"
         android:inputType="textPersonName"
         android:textAlignment="center"
         android:textSize="12sp"
@@ -88,6 +88,7 @@
         android:ems="10"
         android:focusable="false"
         android:focusableInTouchMode="false"
+        android:fontFamily="serif"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.945"
