--- a/app/src/main/res/layout/activity_venue.xml
+++ b/app/src/main/res/layout/activity_venue.xml
@@ -149,11 +149,12 @@
         android:layout_marginLeft="8dp"
         android:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toTopOf="@+id/btmToolbar"
-        app:layout_constraintHorizontal_bias="0.888"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="302dp"
-        tools:layout_editor_absoluteX="1dp" />
+        android:layout_marginTop="230dp"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.502" />
     <include
         android:id="@+id/spintest"
         layout="@layout/layout_venue_top"
@@ -162,26 +163,12 @@
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toTopOf="@+id/lvSpecials"
-        app:layout_constraintVertical_bias="0.5"></include>
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="148dp"
-        android:layout_height="56dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="@+id/spintest"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/spintest"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toTopOf="@+id/spintest"
-        android:layout_marginTop="8dp"
-        tools:layout_editor_absoluteY="146dp" />
+        app:layout_constraintVertical_bias="0.0"></include>
 
 </android.support.constraint.ConstraintLayout>
